# audio-analyzer

./: .clangd  .gitignore  CMakeLists.txt  LICENSE.txt
.zed/: debug.json
src/: main.c
src/base/: arena.h  array.h  core.h  string.h
src/libs/: dr_wav.h
